--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -26,16 +26,13 @@
                         GÓC ĐIỆN ẢNH
                     </h6>
                     <p>
-                        <a href="/the-loai-phim" class="text-reset" style="text-decoration: none">THỂ LOẠI PHIM</a>
+                        <a href="/top-phim" class="text-reset" style="text-decoration: none">TOP PHIM HAY</a>
                     </p>
                     <p>
                         <a href="/binh-luan-phim" class="text-reset" style="text-decoration: none">BÌNH LUẬN PHIM</a>
                     </p>
                     <p>
                         <a href="/blog-dien-anh" class="text-reset" style="text-decoration: none">BLOG ĐIỆN ẢNH</a>
-                    </p>
-                    <p>
-                        <a href="/#!" class="text-reset" style="text-decoration: none">PHIM HAY THÁNG</a>
                     </p>
                 </div>
 
