--- a/src/resource/views/login.hbs
+++ b/src/resource/views/login.hbs
@@ -56,7 +56,7 @@
                                         <i class="fas fa-user"></i>
                                     </span>
                                 </div>
-                                <input name="phone" id="phone" type="number" class="form-control"
+                                <input name="phone" id="phone" type="text" class="form-control"
                                     placeholder="Vui lòng nhập số điện thoại">
                             </div>
 
@@ -115,7 +115,7 @@
     console.log(password)
 
     btn_signIn.addEventListener('click', (e) => {
-        if (phone.value.length < 10) {
+        if (phone.value.length < 5) {
             formLogin.addEventListener('submit', function (event) {
                 event.preventDefault();
             });
