--- a/src/resource/views/buy_ticket.hbs
+++ b/src/resource/views/buy_ticket.hbs
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="/css/buy_ticket.css">
 <div class="container text-center">
     <div class="row mt-2">
@@ -6,24 +10,24 @@
         <div class="col-lg-4 mb-2 p-0">
             <div class="tablist">CHỌN PHIM</div>
             {{#each films}}
-                <div class="border" {{{checkChoosenBackground maphim ../choose}}}>
-                    <a href="/mua-ve/{{maphim}}">
-                        <div class="showtimes-row">
-                            <div class="p-2">
-                                <img style="height: 50px;" src="/img/{{poster}}" class="mt-3">
-                                <i class="icon-c mt-3 ms-2">C{{dotuoi}}</i>
-                                <div class="title-movie mt-3">
-                                        <p {{{checkChoosenTextMain maphim ../choose}}} class="">{{tenphim}}</p>
-                                        <p {{{checkChoosenTextSub maphim ../choose}}} class="vn">{{tenphim}}</p>
-                                    
-                                    {{!-- {{#if tenphimvn}}
-                                        <p class="vn">{{tenphimvn}}</p>
-                                    {{/if}} --}}
-                                </div>
+            <div class="border" {{{checkChoosenBackground maphim ../choose}}}>
+                <a href="/mua-ve/{{maphim}}">
+                    <div class="showtimes-row">
+                        <div class="p-2">
+                            <img style="height: 50px;" src="/img/{{poster}}" class="mt-3">
+                            <i class="icon-c mt-3 ms-2">C{{dotuoi}}</i>
+                            <div class="title-movie mt-3">
+                                <p {{{checkChoosenTextMain maphim ../choose}}} class="">{{tenphim}}</p>
+                                <p {{{checkChoosenTextSub maphim ../choose}}} class="vn">{{tenphim}}</p>
+
+                                {{!-- {{#if tenphimvn}}
+                                <p class="vn">{{tenphimvn}}</p>
+                                {{/if}} --}}
                             </div>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
+            </div>
             {{/each}}
         </div>
 
@@ -31,15 +35,15 @@
         <div class="col-lg-4 mb-2 p-0">
             <div class="tablist">CHỌN SUẤT</div>
             {{#each calenders}}
-                <div class="border">
-                    <div class="select p-2 mb-5">
-                        <div class="mb-3">{{ngaychieu}}</div>
-                        <div class="me-3 float-start">2D - Phụ đề</div>
-                        {{#each suatchieu}}
-                            <a href="{{../../choose}}/{{masuatchieu}}" class="border p-1">{{giochieu}}</a>
-                        {{/each}}
-                    </div>
+            <div class="border">
+                <div class="select p-2 mb-5">
+                    <div class="mb-3">{{ngaychieu}}</div>
+                    <div class="me-3 float-start">2D - Phụ đề</div>
+                    {{#each suatchieu}}
+                    <a href="{{../../choose}}/{{masuatchieu}}" class="border p-1">{{giochieu}}</a>
+                    {{/each}}
                 </div>
+            </div>
             {{/each}}
         </div>
         <div class="col-md-2"></div>
