--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -16,6 +16,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/now_showing.css" />
     <title>L2DBT | Rạp phim hay nhất mọi thời đại</title>
@@ -99,11 +103,11 @@
                         {{#each data}}
                         <div class="comment__items my-4">
                             <div class="comment__item d-flex justify-content-start">
-                                <a class ="imghome" href="/chi-tiet-binh-luan-phim/{{matin}}">
+                                <a class="imghome" href="/chi-tiet-binh-luan-phim/{{matin}}">
                                     <img class="img__reviews" src="{{this.hinhanh}}" alt="review">
                                 </a>
                                 <div class="about__movie d-flex flex-column">
-                                    <a class ="linkhome" href="/chi-tiet-binh-luan-phim/{{matin}}">
+                                    <a class="linkhome" href="/chi-tiet-binh-luan-phim/{{matin}}">
                                         <h6>[Review] {{this.tieude}}</h6>
                                     </a>
                                     <div class="rate d-flex">
@@ -130,11 +134,11 @@
                         {{#each blogs}}
                         <div class="blog__items my-4">
                             <div class="comment__item d-flex justify-content-between">
-                                <a  href="/chi-tiet-blog-dien-anh/{{matin}}">
+                                <a href="/chi-tiet-blog-dien-anh/{{matin}}">
                                     <img class="img__reviews" src="{{this.hinhanh}}" alt="review">
                                 </a>
                                 <div class="about__movie d-flex flex-column">
-                                    <a class ="linkhome" href="/chi-tiet-blog-dien-anh/{{matin}}">
+                                    <a class="linkhome" href="/chi-tiet-blog-dien-anh/{{matin}}">
                                         <h6>{{this.tieude}}</h6>
                                     </a>
                                     <div class="rate d-flex">
