--- a/src/resource/views/policy.hbs
+++ b/src/resource/views/policy.hbs
@@ -144,6 +144,10 @@
         margin-bottom: 8px;
     }
 </style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <body>
     <div class="container mt-3">
@@ -318,7 +322,7 @@
                 <div class="row">
                     <div class="movie-item">
                         <div class="image-container">
-                            <img src="./img/{{poster}}" class="movie-image" style="width: 300px;"/>
+                            <img src="./img/{{poster}}" class="movie-image" style="width: 300px;" />
                             <div class="hidden-content">
                                 <p><label class="movie-c">C{{dotuoi}}</label></p>
                                 <a href="/chi-tiet-phim/{{maphim}}">
